fixed time alignment on devices in horizontal position

--- a/src/style/global.css
+++ b/src/style/global.css
@@ -280,5 +280,6 @@ footer .hour span {
 
     footer .hour {
         font-size: 5rem;
+        text-align: center;
     }
 }
